tests/fixtures/bad/wrong_prefix.maze
name:       maze.bad.name
theme:      nature
size:       4x4
start:      1,1
time_start: 08:00

tiles:
....
....
....
....

entities:
pickup#other.seed 1 1 item:seed
